[package]
edition = "2021"
name = "benchmarks"
version = "0.1.0"

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.22"
futures = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
redis = {version = "0.22.1", features = ["tokio-comp"]}
redis_ts = {version = "0.4.2", features = ['tokio-comp']}
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
warp = "0.3"
